# claude-code-account-switcher

./: CHANGELOG.md  Cargo.toml  README.md  README.ru.md  claude-switch.sh  release-please-config.json
.github/workflows/: ci.yml  release-please.yml  release.yml  rust.yml  shell.yml
shell/: claude-wrapper.sh  init.bash  init.ps1  init.zsh
src/: config.rs  i18n.rs  ide.rs  identity.rs  main.rs  resolve.rs  seed.rs
src/commands/: activate.rs  add.rs  clone_settings.rs  completions.rs  default.rs  doctor.rs  import.rs  init.rs  install.rs  link.rs  links.rs  list.rs  login.rs  mod.rs  remove.rs  reset.rs  run.rs  status.rs  statusline.rs  unlink.rs  update.rs  usage.rs  whoami.rs
