[package]
name = "claude-acc"
version = "0.1.0"
edition = "2024"
description = "Claude Code Account Switcher — bind different accounts to different directories"
authors = ["Petr Radilov"]
license = "MIT"
repository = "https://github.com/Nemo-Illusionist/claude-code-account-switcher"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"

[profile.release]
lto = true
strip = true
