[package]
name = "claude-acc"
version = "0.9.0"
edition = "2024"
description = "Claude Code Account Switcher — bind different accounts to different directories"
authors = ["Petr Radilov"]
license = "MIT"
repository = "https://github.com/Nemo-Illusionist/claude-code-account-switcher"

[dependencies]
clap = { version = "4", features = ["derive"] }
dirs = "6"
serde_json = "1"
sha2 = "0.10"

[profile.release]
lto = true
strip = true
